--- a/Views/Usuario/cadastro.cshtml
+++ b/Views/Usuario/cadastro.cshtml
@@ -40,11 +40,14 @@
                 <input class="nomeCadastro" type="text" name="nome" placeholder="nome" required="true">
                 <input class="emailCadastro" type="email" name="email" placeholder="email" required="true">
                 <input class="senhaCadastro" type="password" name="senha" placeholder="senha" required="true">
-                <button name="cadastrar" type="submit" class="cadastrar">Cadastrar</button>
+                <br>
+                <button class="cadastrar" name="cadastrar" type="submit" >Cadastrar</button>
             </div>
 
+            <div class="chamaLogin">
             <h3 class="areaLogin">Acessar área de login</h3>
             <a href="/Usuario/Login">Login</a>
+            </div>
             </form>
         </center>
     </main>
