--- a/Views/Usuario/login.cshtml
+++ b/Views/Usuario/login.cshtml
@@ -39,7 +39,8 @@
                 <h2>Login</h2>
                 <input class="emailLogin" type="email" placeholder="email" name="email" required="true">
                 <input class="senhaLogin" type="password" placeholder="senha" name="senha" required="true">
-                <button type="submit" class="logar">Entrar</button>
+                <br>
+                <button class="botaoLogin" type="submit" class="logar">Entrar</button>
             </div>
 
             <div class="chamaCadastro">
