--- a/wwwroot/css/login.css
+++ b/wwwroot/css/login.css
@@ -46,11 +46,29 @@ p{
 .texto2{
     padding: 30px 0px 50px;
 }
+.botaoLogin{
+    margin: 5px 0 50px;
+    font-size: 14px;
+    color: #050505;
+    padding: 5px 20px;
+    background-color: lightgray;
+    -moz-border-radius: 30px;
+    -webkit-border-radius: 30px;
+    border-radius: 30px;
+    border: 1px solid #000000;
+     box-shadow:
+        0px 1px 3px rgba(000,000,000,0.5),
+        inset 0px 0px 1px rgba(255,255,255,0.7);
+    text-shadow:
+        0px -1px 0px rgba(000,000,000,0.4),
+        0px 1px 0px rgba(255,255,255,0.3);
+}
 .barra-footer{
     background-color: white;
     border: 1px solid black;
     width: auto;
     height: auto;
+    margin-top: 50px;
 }
 .barra-footer li{
     display: inline-flex;
@@ -64,8 +82,6 @@ p{
     text-align: center;
 }
 .chamaCadastro{
-    padding-top: 100px;
-}
-.chamaCadastro a{
+    padding-top: 50px;
     font-size: 40px;
 }
