--- a/wwwroot/css/suporte.css
+++ b/wwwroot/css/suporte.css
@@ -74,6 +74,20 @@ p{
     text-transform: uppercase;
     border-radius: .25rem;
     padding: 5px;
+    font-size: 14px;
+    color: #050505;
+    padding: 10px 20px;
+    background-color: lightgray;
+    -moz-border-radius: 30px;
+    -webkit-border-radius: 30px;
+    border-radius: 30px;
+    border: 1px solid #000000;
+     box-shadow:
+        0px 1px 3px rgba(000,000,000,0.5),
+        inset 0px 0px 1px rgba(255,255,255,0.7);
+    text-shadow:
+        0px -1px 0px rgba(000,000,000,0.4),
+        0px 1px 0px rgba(255,255,255,0.3);
 }
 .faq{
    margin-top: 50px;
@@ -83,11 +97,23 @@ p{
 }
 .areaComentario{
     width: 600px;
-    height: 100px;
+    padding-bottom: 100px;
 }
-/* .botaoComentario{ */
-    /* text-transform: uppercase; */
-    /* border-radius: .25rem; */
-    /* padding: 5px; */
-    /* margin-bottom: 35px; */
-/* } */
+.botaoComentario{
+    text-transform: uppercase;
+    margin: 5px 0 50px;
+    font-size: 14px;
+    color: #050505;
+    padding: 10px 20px;
+    background-color: lightgray;
+    -moz-border-radius: 30px;
+    -webkit-border-radius: 30px;
+    border-radius: 30px;
+    border: 1px solid #000000;
+     box-shadow:
+        0px 1px 3px rgba(000,000,000,0.5),
+        inset 0px 0px 1px rgba(255,255,255,0.7);
+    text-shadow:
+        0px -1px 0px rgba(000,000,000,0.4),
+        0px 1px 0px rgba(255,255,255,0.3);
+}
