trabalhando no cshtml

--- a/Views/Comentario/suporte.cshtml
+++ b/Views/Comentario/suporte.cshtml
@@ -75,7 +75,7 @@
             <div class="titulo3">
                 <form action="/Comentario/Suporte" method="POST">
                 <h2>Comentários</h2>
-                <input class="areaComentario" type="text" name="textoComentario" placeholder="Deixe seu comentário">
+                <input class="areaComentario" type="text" name="textoComentario" placeholder="Deixe seu comentário" required="true">
                 <br>
                 <button class="botaoComentario" type="submit" name="CadastrarComentario">Cadastrar Comentario</button>
             </div>
