--- a/wwwroot/css/suporte.css
+++ b/wwwroot/css/suporte.css
@@ -72,8 +72,7 @@ p{
 }
 .input3{
     text-transform: uppercase;
-    border-radius: .25rem;
-    padding: 5px;
+    margin: 5px;
     font-size: 14px;
     color: #050505;
     padding: 10px 20px;
