--- a/Views/Usuario/sobreNos.cshtml
+++ b/Views/Usuario/sobreNos.cshtml
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <img class="banner" src="/imagens/banner.png" width="100%" height="800px" alt="banner">
+        <img class="banner" src="/imagens/banner.png" width="100%" height="auto" alt="banner">
         <div class="barra">
             <ul class="links">
                 <li>
@@ -46,7 +46,7 @@
                     <br> similique consectetur harum aspernatur optio, cum aliquam
                     <br> voluptates.
                 </p>
-                <img src="/imagens/carfel.jpg" alt="">
+                <img src="/imagens/carfel.jpg" width="35%" height="35%" alt="imagem dos socios juntos">
                 <h3>Porque decidimos criar o Check Point</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     <br> Dignissimos nulla quia quibusdam, harum praesentium
