--- a/Views/Comentario/suporte.cshtml
+++ b/Views/Comentario/suporte.cshtml
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <img class="banner" src="/imagens/banner.png" width="100%" height="800px" alt="banner">
+        <img class="banner" src="/imagens/banner.png" width="100%" height="auto" alt="banner">
         <div class="barra">
             <ul class="links">
                 <li>
@@ -37,7 +37,6 @@
             <div class="titulo">
                 <h2>saq</h2>
             </div>
-            <!-- copiar ate aqui em todas   -->
             <div class="subtitulo2">
                 <h3>Envie uma mensagem em caso de dúvida</h3>
                 <input class="input1" type="text" placeholder="Nome">
@@ -105,6 +104,7 @@
                 </tr>
             }
         </table>
+        <br>
             </form>
         </center>
     </main>
