--- a/Views/Usuario/index.cshtml
+++ b/Views/Usuario/index.cshtml
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <img class="banner" src="/imagens/banner.png" width="100%" height="800px" alt="banner">
+        <img class="banner" src="/imagens/banner.png" width="100%" height="auto" alt="banner">
         <div class="barra">
             <ul class="links">
                 <li>
@@ -35,7 +35,7 @@
         <center>
             <form action="/Usuario/Index" method=POST>
             <h2>check point</h2>
-            <img class="tecno4" src="/imagens/tecno.jpg" width="30%" height="300px" alt="tecnologia">
+            <img class="tecno4" src="/imagens/tecno.jpg" width="35%" height="35%" alt="tecnologia">
 
             <div class="texto">
                 <h3>Funcionalidade</h3><br>
@@ -47,7 +47,7 @@
                 </p>
             </div>
 
-            <img class="tecno4" src="/imagens/tecno2.jpeg" width="30%" height="300px" alt="segunda tecnologia">
+            <img class="tecno4" src="/imagens/tecno2.jpeg" width="35%" height="35%" alt="segunda tecnologia">
 
             <div class="texto2">
                 <h3>Objetivo</h3><br>
