--- a/Views/Usuario/login.cshtml
+++ b/Views/Usuario/login.cshtml
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <img class="banner" src="/imagens/banner.png" width="100%" height="800px" alt="banner">
+        <img class="banner" src="/imagens/banner.png" width="100%" height="auto" alt="banner">
         <div class="barra">
             <ul class="links">
                 <li>
