--- a/wwwroot/css/suporte.css
+++ b/wwwroot/css/suporte.css
@@ -64,11 +64,11 @@ p{
     text-align: center;
 }
 .input1{
-    width: 600px;
+    width: 60%;
 }
 .input2{
-    width: 600px;
-    height: 300px;
+    width: 60%;
+    height: 250px;
 }
 .input3{
     text-transform: uppercase;
@@ -80,13 +80,7 @@ p{
     -moz-border-radius: 30px;
     -webkit-border-radius: 30px;
     border-radius: 30px;
-    border: 1px solid #000000;
-     box-shadow:
-        0px 1px 3px rgba(000,000,000,0.5),
-        inset 0px 0px 1px rgba(255,255,255,0.7);
-    text-shadow:
-        0px -1px 0px rgba(000,000,000,0.4),
-        0px 1px 0px rgba(255,255,255,0.3);
+    border: 1px solid black;
 }
 .faq{
    margin-top: 50px;
@@ -95,7 +89,7 @@ p{
     margin-top: 25px;
 }
 .areaComentario{
-    width: 600px;
+    width: 60%;
     padding-bottom: 100px;
 }
 .botaoComentario{
@@ -108,11 +102,5 @@ p{
     -moz-border-radius: 30px;
     -webkit-border-radius: 30px;
     border-radius: 30px;
-    border: 1px solid #000000;
-     box-shadow:
-        0px 1px 3px rgba(000,000,000,0.5),
-        inset 0px 0px 1px rgba(255,255,255,0.7);
-    text-shadow:
-        0px -1px 0px rgba(000,000,000,0.4),
-        0px 1px 0px rgba(255,255,255,0.3);
+    border: 1px solid black;
 }
